syntax = "proto3";
package state;

message ConnectUser { int32 id = 1; }

message ConnectUserRsp {
  string ip = 1;
  int32 port = 2;
}

message TestNetwork { string msg = 1; }

service StateService {
  rpc GetImServer(ConnectUser) returns (ConnectUserRsp) {}
  rpc ActiveImBackupServer(ConnectUser) returns (ConnectUserRsp) {}
  rpc TestNetworkPing(TestNetwork) returns (TestNetwork) {}
}